Fix overflowing code boxes

--- a/example/full_example/resources/post.css
+++ b/example/full_example/resources/post.css
@@ -10,6 +10,12 @@ ul, pre, p, h2, .post-content {
     margin-bottom: 1rem;
 }
 
+/* Allow for scrolling code boxes */
+code {
+    display: block;
+    overflow-x:auto;
+}
+
 /* Post Image */
 .post-image {
     max-width: 100%;
